Setting up folder structure
Setting up folder structure based on their usage.
Assets: to keep external files
Domain: will have models and interfaces
Shared: Methods with common functionality
Orchestrator: To add mehtods to give calls to their respective business logic code
Infrastructure: All the business logic resides here
Dataaccess: dedicated for database related methods

--- a/InventoryUpdater/InventoryUpdater.csproj
+++ b/InventoryUpdater/InventoryUpdater.csproj
@@ -5,4 +5,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Assets\" />
+    <Folder Include="Infrastructure\DataAccess\" />
+    <Folder Include="Shared\" />
+    <Folder Include="Orchestrator\" />
+  </ItemGroup>
+
 </Project>
