--- a/InventoryUpdater/InventoryUpdater.csproj
+++ b/InventoryUpdater/InventoryUpdater.csproj
@@ -12,4 +12,9 @@
     <Folder Include="Orchestrator\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="YamlDotNet" Version="9.1.4" />
+  </ItemGroup>
+
 </Project>
